# LabIndex

./: .gitignore  CLAUDE.md  IMPLEMENTATION_PLAN.md  LICENSE  README.md  SESSION_NOTES_2026-01-26.md  SESSION_NOTES_2026-01-29.md  analyze_photometry.py  crash_log.txt  launch.bat  pyproject.toml  run.py  test_adaptive_linking.py  test_mvvm.py
_internal/docs/: GRANT_AIM1_EDITS.md  GRANT_AIM1_LABINDEX_ALIGNMENT.md
docs/: SESSION_NOTES.md
docs/plan/: 00_master_plan.md  01_architecture_and_tiers.md  02_safety_readonly.md  07_retrieval_and_ranking.md
docs/plan/labindex_plan_pack/: 03_sqlite_schema_and_fts.md  04_crawler_inventory.md  06_linking_and_edges.md  12_experiment_integration.md  13_testing_and_performance.md  14_standards_mcp_and_agent_sdks.md  README.md
docs/plan/labindex_plan_pack_v5/: 00_master_plan.md  03_sqlite_schema_and_fts.md  05_extractors_pipeline.md  08_llm_agent_and_tools.md  09_learning_writeback.md  10_ui_mvvm_design.md  11_plugins_and_iteration.md  16_llm_guided_linking_and_evidence_navigation.md  17_llm_link_auditor_and_feature_layer.md  README.md
src/labindex_app/: __init__.py  __main__.py
src/labindex_app/dialogs/: __init__.py  graph_filter_dialog.py  strategy_builder_dialog.py
src/labindex_app/resources/: __init__.py  styles.py
src/labindex_app/viewmodels/: __init__.py  agent_vm.py  base.py  candidate_review_vm.py  coordinator.py  graph_vm.py  index_status_vm.py  inspector_vm.py  search_vm.py  strategy_explorer_vm.py
src/labindex_core/: __init__.py
tests/: __init__.py
tests/unit/: __init__.py  test_readonly_fs.py
(+62 files in other folders)
