[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "labindex"
version = "0.1.0"
description = "Read-only lab drive indexer with LLM-assisted search"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "PhysioMetrics Team"}
]
keywords = ["lab", "indexer", "search", "sqlite", "fts5", "pyqt6"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "PyQt6>=6.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "pytest-qt",
]
llm = [
    "anthropic>=0.18.0",
]
extraction = [
    "python-pptx",
    "python-docx",
    "openpyxl",
    "PyPDF2",
]

[project.scripts]
labindex = "labindex_app.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
